# news-sentiment-analysis

./: Cargo.toml  README.md  logo
docs/: design.md
images/: Project Structure
pages/: index.html  script.js  styles.css
sentiment_analysis/: README.md  setup.py
sentiment_analysis/src/roberta_sentiment/: api_server.py  ddg_search.py  sentiment.py  start.py
src/: main.rs  web_server.rs
